tests/fixtures/flow/mermaid/positive/flowchart_rl_bidirectional.mmd
flowchart RL
A <--> B
B <-.-> C
C <==> D
