tests/fixtures/flow/mermaid/negative/malformed_subgraph.mmd
flowchart TD
subgraph lane
A --> B
